client/src/App.css
@import "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";

.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #222;
  height: 150px;
  padding: 20px;
  color: white;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}
.leaflet-container {
  width: 100%;
  height: 500px;
  outline: none;
  overflow: hidden;
}

#hmebtn{
 font-size: large;
}
#titleNav{
  font-size: xx-large;
  color: white
}
#navbarr{
  background-color: #232f3e;
}
#navbarr ul.navbar-nav li a.nav-link{
  color: white
}
#navbarr ul.navbar-nav li a.nav-link:hover{
  color: #ccc
}
.carouselDiv{
  width:100%;
  height:40% !important;
  padding-bottom: 30px;
}
#carouselpadding {
padding-top: 0px;
}

#eventbuttons{
  background-color: #232f3e;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  border-radius: 0px 0px 5px 5px;
}
#eventspace{
  width: 40%;
}

.buttonevent{

  float: right;
  padding: 5px 10px;
  border: 1px solid black;
  margin: 7px 15px;
  border-radius: 2px;
}
.buttonevent:hover{


  padding: 5px 10px;
  border: 1px solid black;
  margin: 7px 15px;
  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
  border-radius: 2px;
}

.button {
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
}

.button:hover {
  background-color: #4CAF50; /* Green */
  color: white;
}



.eventdetails{
  display: block;
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  width: 80%
}

.carousel-fade .carousel-item .view div{
  filter:blur(5px) brightness(150%);
  background-size:cover !important;
  background-position:center 75%
}
.carousel-fade .carousel-item .view ~ .carousel-caption{
  height:100%;
  display:flex;
  flex-direction:column;
  justify-content:center;
}

#eventfirstrow{
  display: flex;
  flex-direction: row;
  width:100%;
  height:400px;
}

#mapeventbtn{
  float: right;
}
#detailsinfo{
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: white;
  height: 100%;
  width: 40%;
  border-radius: 0px 5px 0px 0px;
  background-color: #37475A;
  text-align: center
}
#detailphoto{
  width: 60%;
}

#detailphoto img{
  border-radius: 5px 0px 0px 0px;
}

#eventinfo{
  flex-wrap: wrap;
  flex-direction: column;
}

.whitespace:after {
  content: '\A';
  white-space: pre;
}

.flip-container {
  perspective: 1000px;

}
	/* flip the pane when hovered */
	.flip-container:hover .flipper, .flip-container.hover .flipper {
		transform: rotateY(180deg);
	}

.flip-container, .front, .back {
	width: 320px;
  height: 320px;
  margin: 15px

}

/* flip speed goes here */
.flipper {
	transition: 0.6s;
	transform-style: preserve-3d;

	position: relative;
}

/* hide back of pane during swap */
.front, .back {
	backface-visibility: hidden;

	position: absolute;
	top: 0;
  left: 0;
  padding: 20px;
  box-shadow: 1px 1px 1px 1px #e6e4e4;
}

/* front pane, placed above back */
.front {
	z-index: 2;
	/* for firefox 31 */
  transform: rotateY(0deg);

}

/* back, initially hidden pane */
.back {
	transform: rotateY(180deg);
}

#evntbtn{

  padding: 5px 10px;
  border: 1px solid black;
  margin: 7px 5px;

  border-radius: 2px;
}
#evntbtn:hover{
  padding: 5px 10px;
  border: 1px solid black;
  margin: 7px 5px;
  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
  border-radius: 2px;
}


#mrenfo{
  float: right;
  font-size: large;
}
#mrenfo:hover{
  float: right;
  font-size: large;
  color: black
}

/* #filter{
  display: flex;
  justify-content: center;
   padding: 20px;
} */

.loginBg {
  margin: 0 !important;
  padding: 0 !important;
  font-family: sans-serif !important;
  background: "white";
  /* background: url("https://www.dhresource.com/0x0s/f2-albu-g4-M00-53-CB-rBVaEFnGXmeAPcY0AACqBgXIt4Y985.jpg/gradient-blue-color-photography-backdrops.jpg") no-repeat !important; */
  background-size: cover !important;
}

.login-box{
  width: 300px !important;
  position: absolute !important;
  top: 50% !important;
  left: 50% !important;
  transform: translate(-50%, -50%) !important;
  color: black !important;
}

.profile-box{
  margin-top: 50px;
  color: black !important;
}

.profile-box h1 {
  float: center !important;
  font-size: 40px !important;
  margin-bottom: 20px !important;
}

.profile-info {
  width: 100% !important;
  overflow: hidden !important;
  font-size: 20px !important;
  padding: 8px 0 !important;
  margin: 8px 0 !important;
  border-bottom: 1px solid #4caf50 !important;
}

.login-box h1 {
  float: left !important;
  font-size: 40px !important;
  border-bottom: 6px solid #232f3e !important;
  margin-bottom: 50px !important;
  padding: 13px 0 !important;
}

.textbox {
  width: 100% !important;
  overflow: hidden !important;
  font-size: 20px !important;
  padding: 8px 0 !important;
  margin: 8px 0 !important;
  border-bottom: 1px solid #232f3e !important;
}

.textbox i {
  width: 26px !important;
  float: left !important;
  text-align: center !important;
}

.textbox input {
  border: none !important;
  outline: none !important;
  background: none !important;
  color: white !important;
  font-size: 18px !important;
  width: 80% !important;
  float: left !important;
  margin: 0 10px !important;
}

.btn{
color: black !important;
  padding: 5px 10px;
  border: 1px solid black !important;
  margin: 7px 5px !important;

  border-radius: 2px !important;
}
.btn :hover{


  padding: 5px 10px !important;
  border: 1px solid black !important;
  margin: 7px 5px !important;
  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5) !important;
  border-radius: 2px !important;
}


.container .carousel-caption{
  right: 0;
  bottom: 0;
  left: 0;
  background: linear-gradient(0deg, rgba(0,0,0,0.5) 0%, rgba(255,255,255,0) 75%);
}

#search-title{
padding-top: 10px;
color: grey
}

@import url(https://fonts.googleapis.com/css?family=Open+Sans);

body{
  background: #f2f2f2;
  font-family: 'Open Sans', sans-serif;
}

.search {
  width: 100%;
  position: relative;
  display: flex;
  justify-content: center;
}

.searchTerm {
  border-right: none;
  padding: 5px;
  height: 36px;
  border-radius: 5px 0 0 5px;
  outline: none;
  color: #9DBFAF;
}

.searchTerm:focus{
  color:black;
}








#myeventscomp{
  border-style: groove;
    text-align: center;
    padding-top: 15px;
    padding-bottom: 13px;
    margin-bottom: 20px;
    width: 80%;

}

#myeventscomp:hover{
  border-style: double;
    text-align: center;
}




#attendevntbtn{

  padding: 5px 10px;

  margin: 7px 5px;


  border-radius: 2px;
}
#attendevntbtn:hover{


  padding: 5px 10px;

  margin: 7px 5px;
  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
  border-radius: 2px;
}


#searchbtns{
  display: flex;
  justify-content: center;
  position: absolute;
  bottom: 5px;
  left: 15%;
}



.profile-card{
  margin-left: 25%;
  width: 50%;
  background-color: #232f3e;
  padding: 25px;
  padding-bottom: 80px;
  margin-top: 50px;
  margin-bottom: 25px;
  color: white;
  border-radius: 10px;
  box-shadow: 0px 10px 14px 1px #949494;
}

.pfp{
  display: block;
  margin-top: 20px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 40px;
}

.field{
  font-weight: bold;
  color: white;
  margin-left: 25px;
  padding: 2px;
}

.profile-header{

  margin-left: 15px;
  margin-top: 20px;
  font-size: 16pt;
}

.profile-header-e{
  display: inline;
  margin-left: 15px;
  font-size: 16pt;
}

.profile-name{
  font-weight: bold;
  text-align: center;
}

.sicko{
  margin-top: 50px
}

.assistance-text{
  width: 350px;
  height: 80px;
  margin-left: 55px;
}

.assistance-click{
  float:right;
  margin-right: 10px;
  margin-top: 10px;
}

.connecttoevent{
  text-align: center;
}

